fix bottom bar jumping 8 pixels down when sidebar was open

--- a/src/assets/styles/cmps/MainView.css
+++ b/src/assets/styles/cmps/MainView.css
@@ -3,7 +3,7 @@
   height: 100%;
   grid-template-columns: auto 1fr minmax(284px, 26.25rem);
   grid-template-areas: "leftpanel mainview rightpanel";
-  padding: 0px 8px 8px 8px;
+  padding: 0px 8px 0px 8px;
   gap: 8px;
   background: black;
   > * {
